@@ -159,9 +159,9 @@ wxLANGUAGE_SAMOAN                      sm     -                -                
 wxLANGUAGE_SANGHO                      sg     -                -                                   LTR    "Sangho"
 wxLANGUAGE_SANSKRIT                    sa     LANG_SANSKRIT    SUBLANG_DEFAULT                     LTR    "Sanskrit"
 wxLANGUAGE_SCOTS_GAELIC                gd     -                -                                   LTR    "Scots Gaelic"
-wxLANGUAGE_SERBIAN                     sr_SR  LANG_SERBIAN     SUBLANG_DEFAULT                     LTR    "Serbian"
-wxLANGUAGE_SERBIAN_CYRILLIC            sr_SR  LANG_SERBIAN     SUBLANG_SERBIAN_CYRILLIC            LTR    "Serbian (Cyrillic)"
-wxLANGUAGE_SERBIAN_LATIN               sr_SR@latin LANG_SERBIAN SUBLANG_SERBIAN_LATIN              LTR    "Serbian (Latin)"
+wxLANGUAGE_SERBIAN                     sr_RS  LANG_SERBIAN     SUBLANG_DEFAULT                     LTR    "Serbian"
+wxLANGUAGE_SERBIAN_CYRILLIC            sr_RS  LANG_SERBIAN     SUBLANG_SERBIAN_CYRILLIC            LTR    "Serbian (Cyrillic)"
+wxLANGUAGE_SERBIAN_LATIN               sr_RS@latin LANG_SERBIAN SUBLANG_SERBIAN_LATIN              LTR    "Serbian (Latin)"
 wxLANGUAGE_SERBIAN_CYRILLIC            sr_YU  LANG_SERBIAN     SUBLANG_SERBIAN_CYRILLIC            LTR    "Serbian (Cyrillic)"
 wxLANGUAGE_SERBIAN_LATIN               sr_YU@latin LANG_SERBIAN SUBLANG_SERBIAN_LATIN              LTR    "Serbian (Latin)"
 wxLANGUAGE_SERBO_CROATIAN              sh     -                -                                   LTR    "Serbo-Croatian"
